<resources>
    <string name="app_name">WebScraper</string>
    <string name="New_releases">New releases</string>
    <string name="View_all">View all</string>
    <string name="Settings">Settings</string>
    <string name="nevigation_drawer_open">Open navigation draw</string>
    <string name="nevigation_drawer_close">Close navigation draw</string>
    <string name="hello_again">Hello again</string>
    <string name="Unread">Unread</string>
    <string name="Add_new">Add new</string>
    <string name="Author">Author</string>
    <string name="Latest_chapter">Latest chapter</string>
    <string name="recheck">Time for recheck (in minutes).</string>
    <string name="Do_check_automatically">Do check automatically</string>
    <string name="Show_standard_notification">Show standard notification</string>
    <string name="Send_notification_on_email">Send notification on email</string>
    <string name="Your_email">Your email</string>
    <string name="Error_wrong_email_format">Error: Wrong email format!!!</string>
    <string name="New_email_set">New email set.</string>
    <string name="New_value_set">New value set</string>
    <string name="Error_incorrect_format">Error incorrect format</string>
    <string name="Title">Title</string>
    <string name="Tags">Tags</string>
    <string name="Website">Website</string>
    <string name="Copied">Copied</string>
    <string name="Number">Number</string>
    <string name="Published_by">Published by</string>
    <string name="Time_of_update">Time of update</string>
    <string name="Last_readed">Last readed</string>
    <string name="instruction_od_adding">To add new novels to database you must copy paste link from main website.</string>
    <string name="Supported_websites">Supported websites</string>
    <string name="Adding_new_novel_was_started">Adding new novel was started</string>
    <string name="Invalid_link">Invalid link</string>
    <string name="Chapter">Chapter</string>
    <string name="Mark_as_read">Mark as read</string>
    <string name="Open_novel">Open novel</string>
    <string name="Error_network_is_not_available">Error network is not available</string>
</resources>