<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/numberLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal"
        android:paddingVertical="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
            android:text="N/A"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/nameLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal"
        android:paddingVertical="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
            android:text="N/A"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/publishedLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal"
        android:paddingVertical="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Published_by"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/published"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
            android:text="N/A"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeAddLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="horizontal"
        android:paddingVertical="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Time_of_update"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/timeAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
            android:text="N/A"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="5dp">


        <ImageButton
            android:id="@+id/ImageButton_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_open_in_browser" />

        <ImageButton
            android:id="@+id/ImageButton_bookMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_bookmark" />

    </LinearLayout>
</LinearLayout>
